[project]
name = "healthcare-ai-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "francesco serafin",email = "francesco.serafin.phd@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "torch (>=2.12.0,<3.0.0)",
    "langchain (>=1.3.1,<2.0.0)",
    "langchain-core (>=1.4.0,<2.0.0)",
    "langchain-openai (>=1.2.2,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "faiss-cpu (>=1.14.2,<2.0.0)",
    "langchain-text-splitters (>=1.1.2,<2.0.0)",
    "langchain-community (>=0.4.2,<0.5.0)"
]

[tool.poetry]
packages = [{include = "healthcare_ai_rag"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
